[package]
name = "embassy-riscv-examples"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-executor = { version = "0.8.0", path = "../../embassy-executor", features = ["arch-riscv32", "executor-thread"] }
riscv-rt = { version = "0.15.0" }
riscv = { version = "0.14.0", features = ["critical-section-single-hart"] }
semihosting = { version = "0.1.20", features = ["stdio", "panic-handler"] }
